Add input indexing and tokenization. Add classes for an AST representing commands Add utility classes for lazy objects and either monads.