@@ -1,23 +1,24 @@
 package push.commands;
 
+import java.util.Arrays;
 import java.util.LinkedList;
-import java.util.List;
 
-public class SeqListCommand implements Command, CommandList {
+public class PipelineCommand implements Command, CommandList {
 
     private final LinkedList<Command> subCommands;
+    private boolean async;
 
-    public SeqListCommand(Command... subCommands) {
+    public PipelineCommand(Command... subCommands) {
         this.subCommands = new LinkedList<>();
-        this.subCommands.addAll(List.of(subCommands));
+        this.subCommands.addAll(Arrays.asList(subCommands));
+        async = false;
     }
 
     @Override
     public int execute() {
         int retCode = 0;
-        for(int i = 0; i < subCommands.size(); i++) {
-            Command c = subCommands.get(i);
-            retCode = c.execute();
+        for(Command c : subCommands) {
+
         }
         return retCode;
     }
@@ -37,29 +38,24 @@ public class SeqListCommand implements Command, CommandList {
         return subCommands.size();
     }
 
-    public List<Command> commands() {
-        return subCommands;
-    }
-
     @Override
     public boolean isAsync() {
-        return false;
+        return async;
     }
 
     @Override
-    public void setAsync(boolean async) { }
+    public void setAsync(boolean async) {
+        this.async = async;
+    }
 
     @Override
     public String toString() {
-        StringBuilder builder = new StringBuilder();
-        builder.append(subCommands.size());
-        builder.append("[ ");
+        StringBuilder builder = new StringBuilder("[ ");
         for(Command c : subCommands) {
             builder.append(c.toString());
             if(!c.isAsync()) {
-                builder.append(";");
+                builder.append("; ");
             }
-            builder.append(' ');
         }
         builder.append(']');
         return builder.toString();
